--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -16,10 +16,10 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-web'
-  resourceGroupName: 'fabmedical-[SUFFIX]'
-  clusterName: 'fabmedical-[SUFFIX]'
-  containerRegistryName: 'fabmedical[SUFFIX]'
-  containerRegistry: 'fabmedical[SUFFIX].azurecr.io'
+  resourceGroupName: 'fabmedical-solvidal'
+  clusterName: 'fabmedical-ial'
+  containerRegistryName: 'fabmedicalial'
+  containerRegistry: 'fabmedicalial.azurecr.io'
   dockerfilePath: './content-web'
   tag: '${{ github.run_id  }}'
 
@@ -38,9 +38,9 @@ jobs:
     - name: Login to ACR
       uses: docker/login-action@v1
       with:
-        registry: ${{ env.containerRegistry }}
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
+        registry: 'fabmedicalial.azurecr.io'
+        username: 'fabmedicalial'
+        password: 'ZgWf4+etntOPeW7oR+LQwHoRWU6zhnOJ2zXL+krSeg+ACRAIHQ/8'
 
     - name: Build and push an image to container registry
       uses: docker/build-push-action@v2
@@ -57,14 +57,14 @@ jobs:
       with:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
         cluster-name: '${{ env.clusterName }}'
-        resource-group: '${{ env.resourceGroupName }}'
+        resource-group: 'fabmedical-solvidal'
 
     - name: Create ACR credentials secret
       uses: azure/k8s-create-secret@v1
       with:
-        container-registry-url: ${{ env.containerRegistry }}.azurecr.io
-        container-registry-username: ${{ secrets.ACR_USERNAME }}
-        container-registry-password: ${{ secrets.ACR_PASSWORD }}
+        container-registry-url: 'fabmedicalial.azurecr.io'
+        container-registry-username: 'fabmedicalial.azurecr.io'
+        container-registry-password: 'ZgWf4+etntOPeW7oR+LQwHoRWU6zhnOJ2zXL+krSeg+ACRAIHQ/8'
         secret-name: ingress-demo-secret
         namespace: ingress-demo
         arguments: --force true
@@ -76,7 +76,7 @@ jobs:
     #       web.deployment.yml
     #       web.service.yml
     #     images: |
-    #       ${{ env.containerRegistry }}.azurecr.io/${{ env.imageRepository }}:${{ env.tag }}
+    #       fabmedicalial.azurecr.io/${{ env.imageRepository }}:${{ env.tag }}
     #     imagepullsecrets: |
     #       ingress-demo-secret
     #     namespace: ingress-demo
