--- a/.github/workflows/content-api.yml
+++ b/.github/workflows/content-api.yml
@@ -16,10 +16,10 @@ on:
 # Environment variables are defined so that they can be used throughout the job definitions.
 env:
   imageRepository: 'content-api'
-  resourceGroupName: 'Fabmedical-[SUFFIX]'
-  clusterName: 'fabmedical-[SUFFIX]'
-  containerRegistryName: 'fabmedical[SUFFIX]'
-  containerRegistry: 'fabmedical[SUFFIX].azurecr.io'
+  resourceGroupName: 'Fabmedical-solvidal'
+  clusterName: 'fabmedical-iL'
+  containerRegistryName: 'fabmedicalial'
+  containerRegistry: 'fabmedicalial.azurecr.io'
   dockerfilePath: './content-api'
   tag: '${{ github.run_id  }}'
 
@@ -36,8 +36,8 @@ jobs:
     - name: Build and push an image to container registry
       uses: docker/build-push-action@v1
       with:
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
+        username: 'fabmedicalial'
+        password: 'ZgWf4+etntOPeW7oR+LQwHoRWU6zhnOJ2zXL+krSeg+ACRAIHQ/8'
         path: ${{ env.dockerfilePath  }}
         dockerfile: '${{ env.dockerfilePath }}/Dockerfile'
         registry: ${{ env.containerRegistry }}
