--- a/.github/workflows/content-web.yml
+++ b/.github/workflows/content-web.yml
@@ -53,11 +53,11 @@ jobs:
           ${{ env.containerRegistry }}/${{ env.imageRepository }}:${{ env.tag }}
           ${{ env.containerRegistry }}/${{ env.imageRepository }}:latest
 
-    - uses: Azure/aks-set-context@v1
-      with:
-        creds: '${{ secrets.AZURE_CREDENTIALS }}'
-        cluster-name: '${{ env.clusterName }}'
-        resource-group: 'fabmedical-solvidal'
+    #- uses: Azure/aks-set-context@v1
+    #  with:
+    #    creds: '${{ secrets.AZURE_CREDENTIALS }}'
+    #    cluster-name: '${{ env.clusterName }}'
+    #    resource-group: 'fabmedical-solvidal'
 
     - name: Create ACR credentials secret
       uses: azure/k8s-create-secret@v1
